Fixed Github pages error when loading modules.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ Distance: <span id="distance">0</span>
 Best: <span id="best">0</span>
 </div>
 <script type="module">
-import { play } from '/game.js';
+import { play } from './game.js';
 Ammo().then(function(Ammo) {
     window.T = THREE;
     window.A = Ammo;
