--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ canvas {
     font-family: monospace;
     font-weight: bold;
     font-size: 60px;
+    text-shadow: 2px 2px #000;
 }
 .left {
     left: 100px;
