Fixed canvas resizing with window.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@ body {
     background: #000;
     margin: 0;
     user-select: none;
+    text-align: center;
+    overflow: hidden;
 }
 canvas {
-    display: block;
+    display: inline-block;
 }
 .ui {
     position: fixed;
