--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@ canvas {
     right: 100px;
     text-align: right;
 }
+#start {
+    top: 40vh;
+    width: 100%;
+    font-weight: bold;
+    font-size: 8vh;
+    text-align: center;
+}
 </style>
 </head>
 <body>
@@ -57,6 +64,9 @@ Best: <span id="best">0</span>
 <b>~ Controls ~</b><br>
 Left mouse button: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Place block.<br>
 Mouse wheel / arrow keys: Rotate block.
+</div>
+<div id="start" class="ui" style="display: none">
+Place a block to start.
 </div>
 <script type="module">
 import { play } from './game.js';
