Added more color.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ canvas {
     font-size: 6vh;
 }
 .controls {
+    color: #ddd;
     font-size: 3vh;
 }
 .top {
@@ -45,6 +46,7 @@ canvas {
     text-align: right;
 }
 #start {
+    color: #4f4;
     top: 40vh;
     width: 100%;
     font-weight: bold;
