Set page title to game name.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>ldjam-46</title>
+<title>Build with Haste</title>
 <script src="three.min.js"></script>
 <script src="ammo.wasm.js"></script>
 <style>
